refactor: 데이터를 불변적으로 반환하기 위해 toList()로 수정